tests/functional/lang/eval-fail-recursion.err.exp
error:
       … in the right operand of the update (//) operator
         at /pwd/lang/eval-fail-recursion.bsd:2:11:
            1| let
            2|   a = { } // a;
             |           ^
            3| in

       error: infinite recursion encountered
       at /pwd/lang/eval-fail-recursion.bsd:2:14:
            1| let
            2|   a = { } // a;
             |              ^
            3| in
